--- a/calculator/main/templates/main/main.html
+++ b/calculator/main/templates/main/main.html
@@ -219,7 +219,7 @@
         <!-- Result -->
         <div class="combined-output" id="totalPower">
             The system consumes: <strong>0W</strong><br>
-            Recommended power supply: <strong>0W</strong>
+            Recommended power supply(+20%): <strong>0W</strong>
         </div>
         <button class="reset-button" id="resetButton"><i class="fas fa-undo"></i> Reset</button>
     </div>
